[gd_scene load_steps=10 format=4 uid="uid://c0xi0cvynhpjj"]

[ext_resource type="Script" path="res://main.gd" id="1_g85bv"]
[ext_resource type="Theme" uid="uid://cwy8hml084on5" path="res://defaltButton.tres" id="2_rhjpf"]
[ext_resource type="TileSet" uid="uid://dtwfi3wxt0y64" path="res://roomGeneration/dtest/rooms/tileset2.tres" id="2_smp0y"]
[ext_resource type="Texture2D" uid="uid://cpf7u3pxsks3y" path="res://pixel art/pandoraLogo.png" id="3_fwgeq"]
[ext_resource type="Script" path="res://mainButton.gd" id="4_45lns"]

[sub_resource type="Animation" id="Animation_87vq1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(272, 256)]
}

[sub_resource type="Animation" id="Animation_hekfw"]
resource_name = "buttonEnter"
length = 0.08
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(272, 256), Vector2(712, 256)]
}

[sub_resource type="Animation" id="Animation_b5w6s"]
resource_name = "buttonLeave"
length = 0.08
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(712, 256), Vector2(272, 256)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lh1fk"]
_data = {
"RESET": SubResource("Animation_87vq1"),
"buttonEnter": SubResource("Animation_hekfw"),
"buttonLeave": SubResource("Animation_b5w6s")
}

[node name="main" type="Node2D"]
script = ExtResource("1_g85bv")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD/////BQABAAEAAAD//wAABQABAAEAAAD//wEABQABAAEAAAD//wIABQABAAEAAAD//wMABQABAAEAAAD//wQABQABAAEAAAD//wUABQABAAEAAAD//wYABQABAAEAAAD//wcABQABAAEAAAD//wgABQABAAEAAAD//wkABQABAAEAAAD//woABQABAAEAAAD//wsABQABAAEAAAD//wwABQABAAEAAAD//w0ABQABAAEAAAD//w4ABQABAAEAAAD//w8ABQABAAEAAAD//xAABQABAAEAAAAAAP//BQABAAEAAAAAAAAABQABAAEAAAAAAAEABQABAAEAAAAAAAIABQABAAEAAAAAAAMABQABAAEAAAAAAAQABQABAAEAAAAAAAUABQABAAEAAAAAAAYABQABAAEAAAAAAAcABQABAAEAAAAAAAgABQABAAEAAAAAAAkABQABAAEAAAAAAAoABQABAAEAAAAAAAsABQABAAEAAAAAAAwABQABAAEAAAAAAA0ABQABAAEAAAAAAA4ABQABAAEAAAAAAA8ABQABAAEAAAAAABAABQABAAEAAAABAP//BQABAAEAAAABAAAABQABAAEAAAABAAEABQABAAEAAAABAAIABQABAAEAAAABAAMABQABAAEAAAABAAQABQABAAEAAAABAAUABQABAAEAAAABAAYABQABAAEAAAABAAcABQABAAEAAAABAAgABQABAAEAAAABAAkABQABAAEAAAABAAoABQABAAEAAAABAAsABQABAAEAAAABAAwABQABAAEAAAABAA0ABQABAAEAAAABAA4ABQABAAEAAAABAA8ABQABAAEAAAABABAABQABAAEAAAACAP//BQABAAEAAAACAAAABQABAAEAAAACAAEABQABAAEAAAACAAIABQABAAEAAAACAAMABQABAAEAAAACAAQABQABAAEAAAACAAUABQABAAEAAAACAAYABQABAAEAAAACAAcABQABAAEAAAACAAgABQABAAEAAAACAAkABQABAAEAAAACAAoABQABAAEAAAACAAsABQABAAEAAAACAAwABQABAAEAAAACAA0ABQABAAEAAAACAA4ABQABAAEAAAACAA8ABQABAAEAAAACABAABQABAAEAAAADAP//BQABAAEAAAADAAAABQABAAEAAAADAAEABQABAAEAAAADAAIABQABAAEAAAADAAMABQABAAEAAAADAAQABQABAAEAAAADAAUABQABAAEAAAADAAYABQABAAEAAAADAAcABQABAAEAAAADAAgABQABAAEAAAADAAkABQABAAEAAAADAAoABQABAAEAAAADAAsABQABAAEAAAADAAwABQABAAEAAAADAA0ABQABAAEAAAADAA4ABQABAAEAAAADAA8ABQABAAEAAAADABAABQABAAEAAAAEAP//BQABAAEAAAAEAAAABQABAAEAAAAEAAEABQABAAEAAAAEAAIABQABAAEAAAAEAAMABQABAAEAAAAEAAQABQABAAEAAAAEAAUABQABAAEAAAAEAAYABQABAAEAAAAEAAcABQABAAEAAAAEAAgABQABAAEAAAAEAAkABQABAAEAAAAEAAoABQABAAEAAAAEAAsABQABAAEAAAAEAAwABQABAAEAAAAEAA0ABQABAAEAAAAEAA4ABQABAAEAAAAEAA8ABQABAAEAAAAEABAABQABAAEAAAAFAP//BQABAAEAAAAFAAAABQABAAEAAAAFAAEABQABAAEAAAAFAAIABQABAAEAAAAFAAMABQABAAEAAAAFAAQABQABAAEAAAAFAAUABQABAAEAAAAFAAYABQABAAEAAAAFAAcABQABAAEAAAAFAAgABQABAAEAAAAFAAkABQABAAEAAAAFAAoABQABAAEAAAAFAAsABQABAAEAAAAFAAwABQABAAEAAAAFAA0ABQABAAEAAAAFAA4ABQABAAEAAAAFAA8ABQABAAEAAAAFABAABQABAAEAAAAGAP//BQABAAEAAAAGAAAABQABAAEAAAAGAAEABQABAAEAAAAGAAIABQABAAEAAAAGAAMABQABAAEAAAAGAAQABQABAAEAAAAGAAUABQABAAEAAAAGAAYABQABAAEAAAAGAAcABQABAAEAAAAGAAgABQABAAEAAAAGAAkABQABAAEAAAAGAAoABQABAAEAAAAGAAsABQABAAEAAAAGAAwABQABAAEAAAAGAA0ABQABAAEAAAAGAA4ABQABAAEAAAAGAA8ABQABAAEAAAAGABAABQABAAEAAAAHAP//BQABAAEAAAAHAAAABQABAAEAAAAHAAEABQABAAEAAAAHAAIABQABAAEAAAAHAAMABQABAAEAAAAHAAQABQABAAEAAAAHAAUABQABAAEAAAAHAAYABQABAAEAAAAHAAcABQABAAEAAAAHAAgABQABAAEAAAAHAAkABQABAAEAAAAHAAoABQABAAEAAAAHAAsABQABAAEAAAAHAAwABQABAAEAAAAHAA0ABQABAAEAAAAHAA4ABQABAAEAAAAHAA8ABQABAAEAAAAHABAABQABAAEAAAAIAP//BQABAAEAAAAIAAAABQABAAEAAAAIAAEABQABAAEAAAAIAAIABQABAAEAAAAIAAMABQABAAEAAAAIAAQABQABAAEAAAAIAAUABQABAAEAAAAIAAYABQABAAEAAAAIAAcABQABAAEAAAAIAAgABQABAAEAAAAIAAkABQABAAEAAAAIAAoABQABAAEAAAAIAAsABQABAAEAAAAIAAwABQABAAEAAAAIAA0ABQABAAEAAAAIAA4ABQABAAEAAAAIAA8ABQABAAEAAAAIABAABQABAAEAAAAJAP//BQABAAEAAAAJAAAABQABAAEAAAAJAAEABQABAAEAAAAJAAIABQABAAEAAAAJAAMABQABAAEAAAAJAAQABQABAAEAAAAJAAUABQABAAEAAAAJAAYABQABAAEAAAAJAAcABQABAAEAAAAJAAgABQABAAEAAAAJAAkABQABAAEAAAAJAAoABQABAAEAAAAJAAsABQABAAEAAAAJAAwABQABAAEAAAAJAA0ABQABAAEAAAAJAA4ABQABAAEAAAAJAA8ABQABAAEAAAAJABAABQABAAEAAAAKAP//BQABAAEAAAAKAAAABQABAAEAAAAKAAEABQABAAEAAAAKAAIABQABAAEAAAAKAAMABQABAAEAAAAKAAQABQABAAEAAAAKAAUABQABAAEAAAAKAAYABQABAAEAAAAKAAcABQABAAEAAAAKAAgABQABAAEAAAAKAAkABQABAAEAAAAKAAoABQABAAEAAAAKAAsABQABAAEAAAAKAAwABQABAAEAAAAKAA0ABQABAAEAAAAKAA4ABQABAAEAAAAKAA8ABQABAAEAAAAKABAABQABAAEAAAALAP//BQABAAEAAAALAAAABQABAAEAAAALAAEABQABAAEAAAALAAIABQABAAEAAAALAAMABQABAAEAAAALAAQABQABAAEAAAALAAUABQABAAEAAAALAAYABQABAAEAAAALAAcABQABAAEAAAALAAgABQABAAEAAAALAAkABQABAAEAAAALAAoABQABAAEAAAALAAsABQABAAEAAAALAAwABQABAAEAAAALAA0ABQABAAEAAAALAA4ABQABAAEAAAALAA8ABQABAAEAAAALABAABQABAAEAAAAMAP//BQABAAEAAAAMAAAABQABAAEAAAAMAAEABQABAAEAAAAMAAIABQABAAEAAAAMAAMABQABAAEAAAAMAAQABQABAAEAAAAMAAUABQABAAEAAAAMAAYABQABAAEAAAAMAAcABQABAAEAAAAMAAgABQABAAEAAAAMAAkABQABAAEAAAAMAAoABQABAAEAAAAMAAsABQABAAEAAAAMAAwABQABAAEAAAAMAA0ABQABAAEAAAAMAA4ABQABAAEAAAAMAA8ABQABAAEAAAAMABAABQABAAEAAAANAP//BQABAAEAAAANAAAABQABAAEAAAANAAEABQABAAEAAAANAAIABQABAAEAAAANAAMABQABAAEAAAANAAQABQABAAEAAAANAAUABQABAAEAAAANAAYABQABAAEAAAANAAcABQABAAEAAAANAAgABQABAAEAAAANAAkABQABAAEAAAANAAoABQABAAEAAAANAAsABQABAAEAAAANAAwABQABAAEAAAANAA0ABQABAAEAAAANAA4ABQABAAEAAAANAA8ABQABAAEAAAANABAABQABAAEAAAAOAP//BQABAAEAAAAOAAAABQABAAEAAAAOAAEABQABAAEAAAAOAAIABQABAAEAAAAOAAMABQABAAEAAAAOAAQABQABAAEAAAAOAAUABQABAAEAAAAOAAYABQABAAEAAAAOAAcABQABAAEAAAAOAAgABQABAAEAAAAOAAkABQABAAEAAAAOAAoABQABAAEAAAAOAAsABQABAAEAAAAOAAwABQABAAEAAAAOAA0ABQABAAEAAAAOAA4ABQABAAEAAAAOAA8ABQABAAEAAAAOABAABQABAAEAAAAPAP//BQABAAEAAAAPAAAABQABAAEAAAAPAAEABQABAAEAAAAPAAIABQABAAEAAAAPAAMABQABAAEAAAAPAAQABQABAAEAAAAPAAUABQABAAEAAAAPAAYABQABAAEAAAAPAAcABQABAAEAAAAPAAgABQABAAEAAAAPAAkABQABAAEAAAAPAAoABQABAAEAAAAPAAsABQABAAEAAAAPAAwABQABAAEAAAAPAA0ABQABAAEAAAAPAA4ABQABAAEAAAAPAA8ABQABAAEAAAAPABAABQABAAEAAAAQAP//BQABAAEAAAAQAAAABQABAAEAAAAQAAEABQABAAEAAAAQAAIABQABAAEAAAAQAAMABQABAAEAAAAQAAQABQABAAEAAAAQAAUABQABAAEAAAAQAAYABQABAAEAAAAQAAcABQABAAEAAAAQAAgABQABAAEAAAAQAAkABQABAAEAAAAQAAoABQABAAEAAAAQAAsABQABAAEAAAAQAAwABQABAAEAAAAQAA0ABQABAAEAAAAQAA4ABQABAAEAAAAQAA8ABQABAAEAAAAQABAABQABAAEAAAARAP//BQABAAEAAAARAAAABQABAAEAAAARAAEABQABAAEAAAARAAIABQABAAEAAAARAAMABQABAAEAAAARAAQABQABAAEAAAARAAUABQABAAEAAAARAAYABQABAAEAAAARAAcABQABAAEAAAARAAgABQABAAEAAAARAAkABQABAAEAAAARAAoABQABAAEAAAARAAsABQABAAEAAAARAAwABQABAAEAAAARAA0ABQABAAEAAAARAA4ABQABAAEAAAARAA8ABQABAAEAAAARABAABQABAAEAAAASAP//BQABAAEAAAASAAAABQABAAEAAAASAAEABQABAAEAAAASAAIABQABAAEAAAASAAMABQABAAEAAAASAAQABQABAAEAAAASAAUABQABAAEAAAASAAYABQABAAEAAAASAAcABQABAAEAAAASAAgABQABAAEAAAASAAkABQABAAEAAAASAAoABQABAAEAAAASAAsABQABAAEAAAASAAwABQABAAEAAAASAA0ABQABAAEAAAASAA4ABQABAAEAAAASAA8ABQABAAEAAAASABAABQABAAEAAAATAP//BQABAAEAAAATAAAABQABAAEAAAATAAEABQABAAEAAAATAAIABQABAAEAAAATAAMABQABAAEAAAATAAQABQABAAEAAAATAAUABQABAAEAAAATAAYABQABAAEAAAATAAcABQABAAEAAAATAAgABQABAAEAAAATAAkABQABAAEAAAATAAoABQABAAEAAAATAAsABQABAAEAAAATAAwABQABAAEAAAATAA0ABQABAAEAAAATAA4ABQABAAEAAAATAA8ABQABAAEAAAATABAABQABAAEAAAAUAP//BQABAAEAAAAUAAAABQABAAEAAAAUAAEABQABAAEAAAAUAAIABQABAAEAAAAUAAMABQABAAEAAAAUAAQABQABAAEAAAAUAAUABQABAAEAAAAUAAYABQABAAEAAAAUAAcABQABAAEAAAAUAAgABQABAAEAAAAUAAkABQABAAEAAAAUAAoABQABAAEAAAAUAAsABQABAAEAAAAUAAwABQABAAEAAAAUAA0ABQABAAEAAAAUAA4ABQABAAEAAAAUAA8ABQABAAEAAAAUABAABQABAAEAAAAVAP//BQABAAEAAAAVAAAABQABAAEAAAAVAAEABQABAAEAAAAVAAIABQABAAEAAAAVAAMABQABAAEAAAAVAAQABQABAAEAAAAVAAUABQABAAEAAAAVAAYABQABAAEAAAAVAAcABQABAAEAAAAVAAgABQABAAEAAAAVAAkABQABAAEAAAAVAAoABQABAAEAAAAVAAsABQABAAEAAAAVAAwABQABAAEAAAAVAA0ABQABAAEAAAAVAA4ABQABAAEAAAAVAA8ABQABAAEAAAAVABAABQABAAEAAAAWAP//BQABAAEAAAAWAAAABQABAAEAAAAWAAEABQABAAEAAAAWAAIABQABAAEAAAAWAAMABQABAAEAAAAWAAQABQABAAEAAAAWAAUABQABAAEAAAAWAAYABQABAAEAAAAWAAcABQABAAEAAAAWAAgABQABAAEAAAAWAAkABQABAAEAAAAWAAoABQABAAEAAAAWAAsABQABAAEAAAAWAAwABQABAAEAAAAWAA0ABQABAAEAAAAWAA4ABQABAAEAAAAWAA8ABQABAAEAAAAWABAABQABAAEAAAAXAP//BQABAAEAAAAXAAAABQABAAEAAAAXAAEABQABAAEAAAAXAAIABQABAAEAAAAXAAMABQABAAEAAAAXAAQABQABAAEAAAAXAAUABQABAAEAAAAXAAYABQABAAEAAAAXAAcABQABAAEAAAAXAAgABQABAAEAAAAXAAkABQABAAEAAAAXAAoABQABAAEAAAAXAAsABQABAAEAAAAXAAwABQABAAEAAAAXAA0ABQABAAEAAAAXAA4ABQABAAEAAAAXAA8ABQABAAEAAAAXABAABQABAAEAAAAYAP//BQABAAEAAAAYAAAABQABAAEAAAAYAAEABQABAAEAAAAYAAIABQABAAEAAAAYAAMABQABAAEAAAAYAAQABQABAAEAAAAYAAUABQABAAEAAAAYAAYABQABAAEAAAAYAAcABQABAAEAAAAYAAgABQABAAEAAAAYAAkABQABAAEAAAAYAAoABQABAAEAAAAYAAsABQABAAEAAAAYAAwABQABAAEAAAAYAA0ABQABAAEAAAAYAA4ABQABAAEAAAAYAA8ABQABAAEAAAAYABAABQABAAEAAAAZAP//BQABAAEAAAAZAAAABQABAAEAAAAZAAEABQABAAEAAAAZAAIABQABAAEAAAAZAAMABQABAAEAAAAZAAQABQABAAEAAAAZAAUABQABAAEAAAAZAAYABQABAAEAAAAZAAcABQABAAEAAAAZAAgABQABAAEAAAAZAAkABQABAAEAAAAZAAoABQABAAEAAAAZAAsABQABAAEAAAAZAAwABQABAAEAAAAZAA0ABQABAAEAAAAZAA4ABQABAAEAAAAZAA8ABQABAAEAAAAZABAABQABAAEAAAAaAP//BQABAAEAAAAaAAAABQABAAEAAAAaAAEABQABAAEAAAAaAAIABQABAAEAAAAaAAMABQABAAEAAAAaAAQABQABAAEAAAAaAAUABQABAAEAAAAaAAYABQABAAEAAAAaAAcABQABAAEAAAAaAAgABQABAAEAAAAaAAkABQABAAEAAAAaAAoABQABAAEAAAAaAAsABQABAAEAAAAaAAwABQABAAEAAAAaAA0ABQABAAEAAAAaAA4ABQABAAEAAAAaAA8ABQABAAEAAAAaABAABQABAAEAAAAbAP//BQABAAEAAAAbAAAABQABAAEAAAAbAAEABQABAAEAAAAbAAIABQABAAEAAAAbAAMABQABAAEAAAAbAAQABQABAAEAAAAbAAUABQABAAEAAAAbAAYABQABAAEAAAAbAAcABQABAAEAAAAbAAgABQABAAEAAAAbAAkABQABAAEAAAAbAAoABQABAAEAAAAbAAsABQABAAEAAAAbAAwABQABAAEAAAAbAA0ABQABAAEAAAAbAA4ABQABAAEAAAAbAA8ABQABAAEAAAAbABAABQABAAEAAAAcAP//BQABAAEAAAAcAAAABQABAAEAAAAcAAEABQABAAEAAAAcAAIABQABAAEAAAAcAAMABQABAAEAAAAcAAQABQABAAEAAAAcAAUABQABAAEAAAAcAAYABQABAAEAAAAcAAcABQABAAEAAAAcAAgABQABAAEAAAAcAAkABQABAAEAAAAcAAoABQABAAEAAAAcAAsABQABAAEAAAAcAAwABQABAAEAAAAcAA0ABQABAAEAAAAcAA4ABQABAAEAAAAcAA8ABQABAAEAAAAcABAABQABAAEAAAAdAP//BQABAAEAAAAdAAAABQABAAEAAAAdAAEABQABAAEAAAAdAAIABQABAAEAAAAdAAMABQABAAEAAAAdAAQABQABAAEAAAAdAAUABQABAAEAAAAdAAYABQABAAEAAAAdAAcABQABAAEAAAAdAAgABQABAAEAAAAdAAkABQABAAEAAAAdAAoABQABAAEAAAAdAAsABQABAAEAAAAdAAwABQABAAEAAAAdAA0ABQABAAEAAAAdAA4ABQABAAEAAAAdAA8ABQABAAEAAAAdABAABQABAAEAAAAeAP//BQABAAEAAAAeAAAABQABAAEAAAAeAAEABQABAAEAAAAeAAIABQABAAEAAAAeAAMABQABAAEAAAAeAAQABQABAAEAAAAeAAUABQABAAEAAAAeAAYABQABAAEAAAAeAAcABQABAAEAAAAeAAgABQABAAEAAAAeAAkABQABAAEAAAAeAAoABQABAAEAAAAeAAsABQABAAEAAAAeAAwABQABAAEAAAAeAA0ABQABAAEAAAAeAA4ABQABAAEAAAAeAA8ABQABAAEAAAAeABAABQABAAEAAAD//xEABQABAAEAAAAAABEABQABAAEAAAABABEABQABAAEAAAACABEABQABAAEAAAADABEABQABAAEAAAAEABEABQABAAEAAAAFABEABQABAAEAAAAGABEABQABAAEAAAAHABEABQABAAEAAAAIABEABQABAAEAAAAJABEABQABAAEAAAAKABEABQABAAEAAAALABEABQABAAEAAAAMABEABQABAAEAAAANABEABQABAAEAAAAOABEABQABAAEAAAAPABEABQABAAEAAAAQABEABQABAAEAAAARABEABQABAAEAAAASABEABQABAAEAAAATABEABQABAAEAAAAUABEABQABAAEAAAAVABEABQABAAEAAAAWABEABQABAAEAAAAXABEABQABAAEAAAAYABEABQABAAEAAAAZABEABQABAAEAAAAaABEABQABAAEAAAAbABEABQABAAEAAAAcABEABQABAAEAAAAdABEABQABAAEAAAAeABEABQABAAEAAAAfAP//BQABAAEAAAAfAAAABQABAAEAAAAfAAEABQABAAEAAAAfAAIABQABAAEAAAAfAAMABQABAAEAAAAfAAQABQABAAEAAAAfAAUABQABAAEAAAAfAAYABQABAAEAAAAfAAcABQABAAEAAAAfAAgABQABAAEAAAAfAAkABQABAAEAAAAfAAoABQABAAEAAAAfAAsABQABAAEAAAAfAAwABQABAAEAAAAfAA0ABQABAAEAAAAfAA4ABQABAAEAAAAfAA8ABQABAAEAAAAfABAABQABAAEAAAAfABEABQABAAEAAAA=")
tile_set = ExtResource("2_smp0y")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
offset_left = 33.0
offset_top = 448.0
offset_right = 305.0
offset_bottom = 704.0
size_flags_vertical = 4

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme = ExtResource("2_rhjpf")
text = "play"
alignment = 2
script = ExtResource("4_45lns")

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme = ExtResource("2_rhjpf")
text = "quit"
alignment = 2
script = ExtResource("4_45lns")

[node name="PandoraLogo" type="Sprite2D" parent="."]
position = Vector2(1376, 528)
texture = ExtResource("3_fwgeq")

[node name="button" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lh1fk")
}

[connection signal="mouse_entered" from="VBoxContainer/Button" to="VBoxContainer/Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Button" to="VBoxContainer/Button" method="_on_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Button2" to="VBoxContainer/Button2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Button2" to="VBoxContainer/Button2" method="_on_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
